# oh_lame_encoder

./: LICENSE  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/libs/arm64-v8a/: libmp3lame.so.0
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  LogUtil.h  NapiUtil.cpp  NapiUtil.h  napi_init.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/audio/: Player.ets
entry/src/main/ets/audio/enc/: LameEnc.ets
entry/src/main/ets/entryability/: EntryAbility.ets  MicHelper.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
